@@ -1,11 +1,34 @@
 <!DOCTYPE html>
 
 <html>
-  <head>
-    <meta charset="utf-8">
-    <script src="popup.js"></script>
-  </head>
+<head>
+<meta charset="utf-8">
+<script src="popup.js"></script>
+</head>
   <body>
+    <div>
+      <h1>Main</h1>
+      <div>
+        <label>Way 
+          <select id="main-way">
+            <option data-method="evaluate" data-type="0">XPath ANY_TYPE</option>
+            <option data-method="evaluate" data-type="1">XPath NUMBER_TYPE</option>
+            <option data-method="evaluate" data-type="2">XPath STRING_TYPE</option>
+            <option data-method="evaluate" data-type="3">XPath BOOLEAN_TYPE</option>
+            <option data-method="evaluate" data-type="4">XPath UNORDERED_NODE_ITERATOR_TYPE</option>
+            <option data-method="evaluate" data-type="5">XPath ORDERED_NODE_ITERATOR_TYPE</option>
+            <option data-method="evaluate" data-type="6">XPath UNORDERED_NODE_SNAPSHOT_TYPE</option>
+            <option data-method="evaluate" data-type="7">XPath ORDERED_NODE_SNAPSHOT_TYPE</option>
+            <option data-method="evaluate" data-type="8">XPath ANY_UNORDERED_NODE_TYPE</option>
+            <option data-method="evaluate" data-type="9">XPath FIRST_ORDERED_NODE_TYPE</option>
+            <option data-method="querySelector" data-type="">querySelector</option>
+            <option data-method="querySelectorAll" data-type="">querySelectorAll</option>
+          </select>
+        </label>
+      </div>
+      <div><label>Expression <input type="text" id="main-expression"></input></label></div>
+    </div>
+    <hr />
     <div><textarea id="area" value=""></textarea></div>
     <div><button id="send">send</button><button id="send-to-all">send to all</button></div>
     <div><textarea id="result" value=""></textarea><div>
