@@ -1,3 +1,13 @@
+2017-09-12  larissa9839  <larissa9839@gmail.com>
+
+	* tryXpath/scripts/try_xpath_functions.js:
+	Remove xpathResultMap variable.
+	Define xpathResultMaps variable.
+	Define getXpathResultNum function.
+
+	* tryXpath/background/try_xpath_background.js:
+	Remove genericListener.listeners.focusItemInTab function.
+
 2017-09-11  larissa9839  <larissa9839@gmail.com>
 
 	* tryXpath/pages/show_all_results.js:
